# Specwright

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  lint.yml  publish.yml  test.yml
docs/: contributing.md  index.md
docs/api-reference/: cli.md  decorators.md  exceptions.md  index.md  state-machine.md
docs/examples/: basic-api.md  index.md  real-world-project.md  state-workflows.md
docs/getting-started/: index.md  installation.md  quickstart.md  your-first-spec.md
docs/guide/: cli-usage.md  error-handling.md  index.md  spec-decorator.md  state-machines.md  testing-requirements.md
docs/philosophy/: best-practices.md  index.md  llm-collaboration.md  why-specwright.md
examples/: api_endpoint.py  basic_types.py  complex_types.py  database_operations.py  error_handling.py  order_processing.py  tested_function.py  user_account.py  warn_mode_demo.py
examples/cli_generated/: README.md  calculate_score.py  ticket_workflow.py
specwright/: __init__.py  cli.py  decorators.py  exceptions.py  pytest_plugin.py  state_machine.py  testing.py  validation.py
specwright/templates/: function.py.j2  function_test.py.j2  init_module.py.j2  init_pyproject.toml.j2  statemachine.py.j2  statemachine_test.py.j2
tests/: test_cli.py  test_decorators.py  test_exceptions.py  test_handle_errors.py  test_requires_tests.py  test_state_machine.py  test_validation.py
